force-app/main/default/objects/sugati__Holiday_Season__c/sugati__Holiday_Season__c.object-meta.xml
<CustomObject>
    <label>Holiday Season</label>
    <nameField>
        <displayFormat>HS-{0000000}</displayFormat>
        <label>Holiday Season ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Holiday Seasons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>