force-app/main/default/objects/sugati__Holiday_Season__c/fields/sugati__HS_End_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__HS_End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>