force-app/main/default/objects/sugati__Holiday_Season__c/fields/sugati__HS_Holiday_Season__c.field-meta.xml
<CustomField>
    <fullName>sugati__HS_Holiday_Season__c</fullName>
    <label>Holiday Season</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>