force-app/main/default/objects/sugati__Holiday_Season__c/fields/sugati__HS_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__HS_Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>