force-app/main/default/objects/sugati__Holiday_Season__c/fields/sugati__HS_Week_No__c.field-meta.xml
<CustomField>
    <fullName>sugati__HS_Week_No__c</fullName>
    <label>Week No</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>